
     lchown: Change ownership of a symbolic link

     get/set_printable_bstring_size: Get/set the length of the
     printable representation of binary strings. (version 2.3.1)

     statvfs: Intrinsic that wraps statvfs POSIX function that returns
     file system statistics. (version 2.3.1)

     _ftime:  returns the number of (wallclock) seconds since an epoch
     (version 2.3.1)


   The following functions have been enhanced:

     array_map modified to support multiple return values.

     is_substrbytes: Added support for an optional offset into the
       string.

     _push_struct_field_values: An optional argument may be used to
     specify the fields to be pushed. (version 2.3.1)

Interpreter Syntax
==================

   The step parameter was made optional for the _for statement.

   Struct field names may be an arbirtary string:

         X = struct {"some-field", some_other_field };
         X.some_other_field = 3;
         X."some-field" = 4;

   String literals now support \uABCD to specify a 32 bit unicode
   character.  Previously, the braces were required (\u{ABCD}).
   (version 2.3.1)

Module Updates
==============

   stats-module: Added Anderson-Darling normality and
   k-sample tests (version 2.3.1)


slsh library (used by conforming slang apps such as jed, slrn, ...)
===================================================================

   fswalk.sl: Functions that facilitate walking the filesystem.

   listfuns.sl: Set of functions dealing with lists and list-based
     structures (e.g., heaps).

   rearrange: Performs an in-place arrangement of values in an array
     or list (defined in arrayfuns.sl).


slsh
====

   Using "who" at the slsh> prompt will list the names/values of
   variables and functions defined at the prompt.

API News
========

   Note: The slang 2.3.x API is backward binary compatible with slang
   2.y.z.

   Font attributes (italics, bold, underline, ...) may be enabled for